// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInput renders correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              testID="amount-input"
            >
              <Text
                accessibilityRole="text"
                adjustsFontSizeToFit={true}
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 24,
                    "letterSpacing": 0,
                    "lineHeight": 32,
                  }
                }
              >
                $
                100.50
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;

exports[`AmountInput renders correctly with currency selector 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              testID="amount-input"
            >
              <Text
                accessibilityRole="text"
                adjustsFontSizeToFit={true}
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 24,
                    "letterSpacing": 0,
                    "lineHeight": 32,
                  }
                }
              >
                $
                100.50
              </Text>
            </TouchableOpacity>
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 0,
                "marginLeft": 8,
              }
            }
            testID="listitemcolumn"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              disabled={false}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onPress={[MockFunction]}
              testID="select-currency"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  USD
                </Text>
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={16}
                  name="ArrowDown"
                  style={
                    {
                      "height": 16,
                      "marginLeft": 8,
                      "width": 16,
                    }
                  }
                  width={16}
                />
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;

exports[`AmountInput renders loading state correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              testID="amount-input"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#858b9a14",
                      "borderRadius": 30,
                      "padding": 14,
                    },
                    undefined,
                    undefined,
                    undefined,
                    {
                      "width": "50%",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;

exports[`AmountInput renders loading state correctly with currency selector 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              testID="amount-input"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#858b9a14",
                      "borderRadius": 30,
                      "padding": 14,
                    },
                    undefined,
                    undefined,
                    undefined,
                    {
                      "width": "50%",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />
            </TouchableOpacity>
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 0,
                "marginLeft": 8,
              }
            }
            testID="listitemcolumn"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#858b9a14",
                    "borderRadius": 30,
                    "padding": 14,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "width": "30%",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;
